--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <link href="../dist/output.css" rel="stylesheet">
   <title>Coach Funnel LP</title>
 </head>
-<body class="bg-gray-100 flex items-center justify-center h-screen">
-  <h1 class="text-4xl font-bold text-purple-600">Hello Tailwind!</h1>
+<body>
+
+  <nav class="w-full bg-white/80 backdrop-blur-md border-b border-gray-100 sticky top-0 z-50">
+  </nav>
+
 </body>
 </html>
