--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
 
   <nav class="w-full bg-white/80 backdrop-blur-md border-b border-gray-100 sticky top-0 z-50">
+      <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
+      </div>
   </nav>
 
 </body>
