--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 
   <nav class="w-full bg-white/80 backdrop-blur-md border-b border-gray-100 sticky top-0 z-50">
       <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
+
+
+     <!-- LOGO -->
+    <div class="flex items-center gap-2">
+      <img src="./assets/logo.png" alt="Logo" class="h-10 w-auto">
+      <span class="text-xl font-semibold tracking-tight text-gray-900">WebSync360</span>
+    </div>
+
       </div>
   </nav>
 
