Desktop NavList added

--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
       <span class="text-xl font-semibold tracking-tight text-gray-900">WebSync360</span>
     </div>
 
+       <!-- NAV LINKS (Desktop Only) -->
+    <ul class="hidden md:flex items-center gap-10 text-gray-700 font-medium">
+      <li><a href="#" class="hover:text-gray-900 transition">Home</a></li>
+      <li><a href="#about" class="hover:text-gray-900 transition">About</a></li>
+      <li><a href="#programs" class="hover:text-gray-900 transition">Programs</a></li>
+      <li><a href="#testimonials" class="hover:text-gray-900 transition">Testimonials</a></li>
+      <li><a href="#pricing" class="hover:text-gray-900 transition">Pricing</a></li>
+      <li><a href="#contact" class="hover:text-gray-900 transition">Contact</a></li>
+    </ul>
+
       </div>
   </nav>
 
