--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
       <li><a href="#contact" class="hover:text-gray-900 transition">Contact</a></li>
     </ul>
 
+     <!-- CTA BUTTON (Desktop Only) -->
+    <a 
+      href="#"
+      class="hidden md:inline-block bg-indigo-600 text-white px-6 py-2.5 rounded-xl text-sm font-semibold shadow-sm hover:bg-indigo-700 transition"
+    >
+      Book Session
+    </a>
+    
       </div>
   </nav>
 
