--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
       Book Session
     </a>
 
+
+    tton id="menu-btn" class="md:hidden flex flex-col gap-1.5">
+      <span class="block w-6 h-0.5 bg-gray-900"></span>
+      <span class="block w-6 h-0.5 bg-gray-900"></span>
+      <span class="block w-6 h-0.5 bg-gray-900"></span>
+    </button>
+  </div>
+
       </div>
   </nav>
 
