--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
       <li><a href="#contact" class="block w-full hover:text-indigo-600">Contact</a></li>
     </ul>
 
+    <!-- MOBILE CTA -->
+    <a href="#" class="block text-center bg-indigo-600 text-white py-3 rounded-xl font-semibold hover:bg-indigo-700 transition">
+      Book Session
+    </a>
+    
       </div>
   </nav>
 
