--- a/src/index.html
+++ b/src/index.html
@@ -59,79 +59,71 @@
 </nav>
 
 <!-- HERO SECTION -->
-<section class="relative w-full h-[90vh] flex flex-col md:flex-row overflow-hidden">
-  
+<section class="relative w-full h-[90vh] flex flex-col md:flex-row items-stretch overflow-hidden">
+
   <!-- BACKGROUND IMAGE -->
   <div class="absolute inset-0 bg-cover bg-center z-0" 
-       style="background-image: url('');" class="absolute inset-0 w-full h-full object-cover opacity-90 z-0">
+       style="background-image: url(''); opacity: 0.9;">
   </div>
 
   <!-- LEFT PANEL: Text & CTA -->
   <div class="w-full md:w-1/3 flex flex-col justify-center px-8 md:px-16 z-10">
-    <!-- Small top text -->
     <p class="text-sm text-gray-400 uppercase tracking-wide mb-2">Transform Your Life</p>
-    
-    <!-- Big Headline -->
     <h1 class="text-5xl md:text-7xl font-bold leading-tight text-slate-900 break-words">
       Unlock Your <br> Full Potential
     </h1>
-
-    <!-- Small descriptive text -->
     <p class="mt-4 text-gray-600 text-lg md:text-xl max-w-md">
       Personalized performance coaching to help you gain clarity, build discipline, and achieve lasting growth.
     </p>
-
-    <!-- Premium CTA -->
     <a href="#programs" 
        class="mt-8 inline-block bg-black text-white px-8 py-3 rounded-2xl shadow-lg hover:scale-105 transform transition-transform font-semibold">
       Start Your Transformation
     </a>
   </div>
 
-  <!-- MIDDLE PANEL: Coach Image -->
-  <div class="w-full md:w-1/3 flex items-center justify-center relative z-10">
+ <!-- MIDDLE PANEL: Coach Image -->
+<div class="w-full md:w-1/3 flex items-center justify-center relative z-10">
+
+  <div class="relative w-full h-[90vh] md:h-[95vh] translate-x-8 md:translate-x-16">
+    <!-- Floating shadow for depth -->
+    <div class="absolute inset-0 -translate-y-6 blur-3xl bg-black/25 rounded-3xl"></div>
+
     <img src="../To-juz-ostatnie-dni-na-zlozenie-deklaracji-wyboru-podrecznika-na-rok-szkolny-2013-2014-removebg-preview.png" 
          alt="Coach Jane" 
-         class="h-[75%] md:h-[80%] object-cover rounded-xl shadow-xl opacity-90 mix-blend-overlay">
-  </div>
-
-<!-- RIGHT PANEL: Premium Highlights -->
-<div class="w-full md:w-1/3 relative flex flex-col items-end justify-center px-8 md:px-12 z-10">
-
-  <!-- Subtle geometric accents behind the coach -->
-  <div class="absolute -top-4 -right-8 w-24 h-24 bg-gradient-to-tr from-pink-500 to-purple-500 opacity-20 rounded-lg transform rotate-12"></div>
-  <div class="absolute top-16 -right-6 w-32 h-16 bg-gradient-to-br from-indigo-500 to-blue-500 opacity-15 rounded-full transform -rotate-6"></div>
-
-  <!-- Vertical Stats Strip -->
-  <div class="flex flex-col gap-6 w-full max-w-[220px] mt-12">
-
-    <!-- Stat Card 1 -->
-    <div class="bg-black/70 backdrop-blur-md rounded-3xl px-6 py-5 shadow-2xl border border-white/10 text-right hover:scale-105 transition-transform">
-      <div class="text-3xl md:text-4xl font-bold text-white">12k+</div>
-      <div class="text-sm md:text-base text-gray-300 mt-1">Clients</div>
-    </div>
-
-    <!-- Stat Card 2 -->
-    <div class="bg-black/70 backdrop-blur-md rounded-3xl px-6 py-5 shadow-2xl border border-white/10 text-right hover:scale-105 transition-transform">
-      <div class="text-3xl md:text-4xl font-bold text-white">17k+</div>
-      <div class="text-sm md:text-base text-gray-300 mt-1">Sessions</div>
-    </div>
-
-    <!-- Stat Card 3 -->
-    <div class="bg-black/70 backdrop-blur-md rounded-3xl px-6 py-5 shadow-2xl border border-white/10 text-right hover:scale-105 transition-transform">
-      <div class="text-3xl md:text-4xl font-bold text-white">95%</div>
-      <div class="text-sm md:text-base text-gray-300 mt-1">Success Rate</div>
-    </div>
-
-  </div>
-
-  <!-- Optional Subtle Tagline -->
-  <div class="mt-8 text-right">
-    <span class="text-white/30 text-sm md:text-base tracking-wide">Impactful Transformations</span><br>
-    <span class="text-white/30 text-sm md:text-base tracking-wide">Global Reach</span>
+         class="relative w-full h-full object-cover rounded-3xl shadow-2xl opacity-100">
   </div>
 
 </div>
+
+
+  <!-- RIGHT PANEL: Premium Highlights -->
+  <div class="w-full md:w-1/3 relative flex flex-col justify-start px-8 md:px-12 z-10">
+
+    <!-- Geometric accents -->
+    <div class="absolute -top-4 -right-8 w-24 h-24 bg-gradient-to-tr from-pink-500 to-purple-500 opacity-20 rounded-lg transform rotate-12"></div>
+    <div class="absolute top-16 -right-6 w-32 h-16 bg-gradient-to-br from-indigo-500 to-blue-500 opacity-15 rounded-full transform -rotate-6"></div>
+
+    <!-- Vertical Stats Strip -->
+    <div class="flex flex-col gap-6 w-full max-w-[220px] mt-12 ml-auto">
+      <div class="bg-black/70 backdrop-blur-md rounded-3xl px-6 py-5 shadow-2xl border border-white/10 text-right hover:scale-105 transition-transform">
+        <div class="text-3xl md:text-4xl font-bold text-white">12k+</div>
+        <div class="text-sm md:text-base text-gray-300 mt-1">Clients</div>
+      </div>
+      <div class="bg-black/70 backdrop-blur-md rounded-3xl px-6 py-5 shadow-2xl border border-white/10 text-right hover:scale-105 transition-transform">
+        <div class="text-3xl md:text-4xl font-bold text-white">17k+</div>
+        <div class="text-sm md:text-base text-gray-300 mt-1">Sessions</div>
+      </div>
+      <div class="bg-black/70 backdrop-blur-md rounded-3xl px-6 py-5 shadow-2xl border border-white/10 text-right hover:scale-105 transition-transform">
+        <div class="text-3xl md:text-4xl font-bold text-white">95%</div>
+        <div class="text-sm md:text-base text-gray-300 mt-1">Success Rate</div>
+      </div>
+      <div class="bg-black/70 backdrop-blur-md rounded-3xl px-6 py-5 shadow-2xl border border-white/10 text-right hover:scale-105 transition-transform">
+        <div class="text-3xl md:text-4xl font-bold text-white">5+</div>
+        <div class="text-sm md:text-base text-gray-300 mt-1">Awards</div>
+      </div>
+    </div>
+
+  </div>
 
 </section>
 
