--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <body class="bg-black">
 
 <!-- NAVBAR -->
-<nav class="w-full bg-white/50 backdrop-blur-md border-b border-gray-100 sticky top-0 z-50 shadow-lg">
+<nav class="w-full bg-white/100 backdrop-blur-md border-b border-gray-100 sticky top-0 z-50 shadow-lg">
   <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
 
     <!-- LOGO -->
@@ -66,7 +66,7 @@
   </div>
 
 <!-- LEFT PANEL: Text & CTA -->
-<div class="w-full md:w-1/3 flex flex-col justify-center items-center md:items-start px-8 md:px-16 z-10 mb-12 md:mb-0 text-center md:text-left">
+<div class="w-full md:w-1/3 flex flex-col justify-center items-center md:items-start px-8 md:px-26 z-10 mb-12 md:mb-0 text-center md:text-left">
   <p class="text-sm text-gray-400 uppercase tracking-wide mb-2">Transform Your Life</p>
   
  <h1 class="text-5xl md:text-7xl font-bold leading-tight break-words text-white">
@@ -78,7 +78,7 @@
   </p>
 
   <a href="#programs"
-     class="mt-8 inline-block bg-black/70 backdrop-blur-md border border-white/10 text-white px-8 py-3 rounded-3xl shadow-2xl hover:scale-105 transition-transform font-semibold">
+     class="mt-8 inline-block bg-white/100 backdrop-blur-md border border-white/10 text-black px-8 py-3 rounded-3xl shadow-2xl hover:scale-105 transition-transform font-semibold">
     Start Your Transformation
   </a>
 </div>
@@ -112,9 +112,9 @@
 
     <!-- Vertical Stats Strip -->
     <div class="flex flex-col gap-6 w-full max-w-[220px] mt-12 ml-auto">
-      <div class="bg-black/70 backdrop-blur-md rounded-3xl px-6 py-5 shadow-2xl border border-white/10 text-right hover:scale-105 transition-transform">
-        <div class="text-3xl md:text-4xl font-bold text-white">12k+</div>
-        <div class="text-sm md:text-base text-gray-300 mt-1">Clients</div>
+      <div class="bg-white/100 backdrop-blur-md rounded-3xl px-6 py-5 shadow-2xl border border-white/10 text-right hover:scale-105 transition-transform">
+        <div class="text-3xl md:text-4xl font-bold text-black">12k+</div>
+        <div class="text-sm md:text-base text-black-300 mt-1">Clients</div>
       </div>
       <div class="bg-black/70 backdrop-blur-md rounded-3xl px-6 py-5 shadow-2xl border border-white/10 text-right hover:scale-105 transition-transform">
         <div class="text-3xl md:text-4xl font-bold text-white">17k+</div>
@@ -122,11 +122,11 @@
       </div>
       <div class="bg-black/70 backdrop-blur-md rounded-3xl px-6 py-5 shadow-2xl border border-white/10 text-right hover:scale-105 transition-transform">
         <div class="text-3xl md:text-4xl font-bold text-white">95%</div>
-        <div class="text-sm md:text-base text-gray-300 mt-1">Success Rate</div>
+        <div class="text-sm md:text-base text-grey-300 mt-1">Success Rate</div>
       </div>
-      <div class="bg-black/70 backdrop-blur-md rounded-3xl px-6 py-5 shadow-2xl border border-white/10 text-right hover:scale-105 transition-transform">
-        <div class="text-3xl md:text-4xl font-bold text-white">5+</div>
-        <div class="text-sm md:text-base text-gray-300 mt-1">Awards</div>
+      <div class="bg-white/100 backdrop-blur-md rounded-3xl px-6 py-5 shadow-2xl border border-white/10 text-right hover:scale-105 transition-transform">
+        <div class="text-3xl md:text-4xl font-bold text-black">5+</div>
+        <div class="text-sm md:text-base text-black-300 mt-1">Awards</div>
       </div>
     </div>
   </div>
