--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 
     <!-- LOGO -->
     <div class="flex items-center gap-2">
-      <img src="https://cdn-icons-png.flaticon.com/128/4287/4287537.png" alt="Logo" class="h-10 w-auto">
+      <img src="" alt="Logo" class="h-10 w-auto">
       <span class="text-xl font-semibold tracking-tight text-gray-900">The Jane Method</span>
     </div>
 
