--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <!-- LOGO -->
     <div class="flex items-center gap-2">
       <img src="https://cdn-icons-png.flaticon.com/128/4287/4287537.png" alt="Logo" class="h-10 w-auto">
-      <span class="text-xl font-semibold tracking-tight text-gray-900">Th Jane Method</span>
+      <span class="text-xl font-semibold tracking-tight text-gray-900">The Jane Method</span>
     </div>
 
     <!-- NAV LINKS (Desktop Only) -->
@@ -355,7 +355,7 @@
         "I gained clarity, discipline, and results.  
         This coaching experience has been a life-changing investment."
       </p>
-      <div class="mt-6 font-bold text-gray-900 text-xl">Monica L.</div>
+      <div class="mt-6 font-bold text-gray-900 text-xl">Monica L..</div>
       <p class="text-gray-500 text-sm">Tech Specialist</p>
     </div>
 
