--- a/src/index.html
+++ b/src/index.html
@@ -355,7 +355,7 @@
         "I gained clarity, discipline, and results.  
         This coaching experience has been a life-changing investment."
       </p>
-      <div class="mt-6 font-bold text-gray-900 text-xl">Monica L..</div>
+      <div class="mt-6 font-bold text-gray-900 text-xl">Monica L.</div>
       <p class="text-gray-500 text-sm">Tech Specialist</p>
     </div>
 
