--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <!-- Coach Image -->
     <div class="w-full md:w-1/2 flex justify-center">
       <img 
-        src="../public/image.png" 
+        src="./public/image.png" 
         alt="Coach Portrait"
         class="w-full max-w-sm rounded-3xl shadow-xl object-cover"
       >
