--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </ul>
 
   <!-- CTA BUTTON (Desktop Only) -->
-    <a href="https://x.com/StackQuantum1?t=wbPjOAbd22Ar2wdktinKdQ&s=09"
+    <a href="https://x.com/WebSync360o"
       target="_blank"
       class="hidden md:inline-block bg-black text-white px-6 py-2.5 rounded-xl text-sm font-semibold shadow-sm hover:bg-black/80 transition">
       Book Session
